--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -35,3 +35,22 @@ amqp {
   # - passing in the SSL protocol to use e.g. "TLSv1" or "TLSv1.2" will enable SSL
   ssl = disable
 }
+
+akka {
+
+  loggers = ["akka.event.slf4j.Slf4jLogger"]
+  loglevel = "DEBUG"
+  logging-filter = "akka.event.slf4j.Slf4jLoggingFilter"
+
+  # number of dead letters before this logging is turned off
+  log-dead-letters = 100
+  log-dead-letters-during-shutdown = off
+
+  actor {
+    debug {
+      # enable DEBUG logging of unhandled messages
+      unhandled = on
+    }
+  }
+
+}
