get rid of lapper

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -43,8 +43,8 @@ akka {
   logging-filter = "akka.event.slf4j.Slf4jLoggingFilter"
 
   # number of dead letters before this logging is turned off
-  log-dead-letters = 100
-  log-dead-letters-during-shutdown = off
+  #log-dead-letters = 100
+  #log-dead-letters-during-shutdown = off
 
   actor {
     debug {
