--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -2,7 +2,7 @@ amqp {
   # An sequence of known broker addresses (hostname/port pairs)
   # to try in order. A random one will be picked during recovery.
   addresses = [
-    { host = "192.168.1.142", port = 5672 }
+    { host = "localhost", port = 5672 }
   ],
 
   # Virtual host to use when connecting to the broker.
